<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/des_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/rose"
        android:minWidth="100dp"
        android:maxHeight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidlineS"
        app:layout_constraintStart_toStartOf="@id/guidline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidlineS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:id="@+id/bodyXL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:textSize="@dimen/textSize13"
        android:text="@string/str_indicator_intro_bodyXL"
        android:textColor="@color/text_body"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyX"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/bodyX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:textSize="@dimen/textSize13"
        android:text="@string/str_indicator_intro_bodyX"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/text_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/str_indicator_intro_body"
        android:singleLine="true"
        android:textSize="@dimen/textSize13"
        android:textColor="@color/text_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_indicator_intro_desc"
        android:textColor="@color/text_field"
        android:textStyle="bold"
        android:singleLine="true"
        android:textSize="@dimen/textSize16sp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/des_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintVertical_bias="0.450"
        tools:ignore="MissingPrefix" />
</androidx.constraintlayout.widget.ConstraintLayout>