<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="center"
    tools:context=".activity.DetailsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap">
            <ImageView
                android:id="@+id/iv_flower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rose"
                android:scaleType="fitCenter"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#28000000"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/textSizeTitle"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/white"
                        android:src="@mipmap/ic_back"/>
                    <TextView
                        android:id="@+id/tv_cart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart"
                        android:textSize="@dimen/textSize16sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/iv_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        app:tint="@color/white"
                        android:src="@mipmap/ic_love"/>
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/textSizeTitle">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gullar To'plami"
                    android:textStyle="bold"
                    android:textColor="@color/title"
                    android:textSize="@dimen/textSizeTitle"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/textSize5"
                        app:tint="@color/pink"
                        android:src="@drawable/star"/>
                    <TextView
                        android:id="@+id/tv_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.8(268 Reviews)"
                        android:layout_gravity="right"
                        android:textColor="@color/title"
                        android:textSize="@dimen/textSize13"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/textSizeTitle"
                android:orientation="vertical">
                <kr.co.prnd.readmore.ReadMoreTextView
                    android:id="@+id/readMoreTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/tv_desc"
                    app:readMoreColor="@color/pink"
                    app:readMoreMaxLine="5"
                    app:readMoreText="@string/read_more" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:paddingHorizontal="@dimen/textSizeTitle"
                android:layout_marginVertical="@dimen/_15sdp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Size"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium"
                        android:textStyle="bold"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Color"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Different"
                        android:textStyle="bold"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Height"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60 sm"
                        android:textStyle="bold"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Status"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Active"
                        android:textStyle="bold"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/textSizeTitle">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price"
                        android:textColor="@color/title"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="320 ming"
                        android:textStyle="bold"
                        android:textColor="@color/title"
                        android:textSize="@dimen/textSizeBody"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/getStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/textSizeTitle"
                    android:paddingVertical="@dimen/_5sdp"
                    android:layout_gravity="right|center"
                    android:gravity="center_horizontal|center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/button_with_focus">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:text="Add to Cart"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>